[metadata]
name = ai-lab-radar

version = 0.2.0

author = Jasper Hoogland
description = AI Radar for discovering relevant AI related developments

[options]
package_dir=
    =src
packages = find:
install_requires =
    langchain == 0.3.21
    langchain-openai == 0.3.9
    langsmith == 0.3.18
    openai == 1.68.2
    requests == 2.32.3
    PyYAML == 6.0.2

python_requires = ~=3.12

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    airadar = ai_lab_radar.main:main
